Add option to enable/disable NearDrop without exiting the app [+] New menu item Enable NearDrop. Visible only when it was disabled [+] New menu item Disable NearDrop. Visible only when it was enabled [+] Visibility string in menu is now visible only when enabled [+] Translations for 2 new menu items

--- a/NearDrop/zh-Hans.lproj/Localizable.strings
+++ b/NearDrop/zh-Hans.lproj/Localizable.strings
@@ -40,3 +40,8 @@
 /* No comment provided by engineer. */
 "VisibleToEveryone" = "对所有人可见";
 
+/* No comment provided by engineer. */
+"Enable" = "启用NearDrop";
+
+/* No comment provided by engineer. */
+"Disable" = "禁用NearDrop";
